syntax = "proto3";

package ru.otus.homework;

option java_multiple_files = true;

message GenerateRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 value = 1;
}

service NumberGenerator {
  rpc GenerateNumbers(GenerateRequest) returns (stream NumberResponse);
}


